# Game-Development-PixelArt-city-game

./: .gitattributes  .gitignore  CMakeLists.txt  DEVLOG.md  README.md  _commit_msg.txt  app.py  commit_msg.txt  convergence_test.py  extended_test.py  isolation_check.py  main.py  test_rpg_layer.py  tiny_map_debug.py
Info_memory/: mapping.txt
assets/manifests/: buildings_atlas.json  coastal_atlas.json  detected_regions.json  detected_regions_v2.json  kits_atlas.json  landmarks_atlas.json  overlays_atlas.json  park_atlas.json  props_atlas.json  road_diagonals_atlas.json  roofs_atlas.json  runtime_registry_cpp.json  source_sheets.json  sprite_registry.json  terrain_atlas.json
docs/: ART_PROMPT_MISSING_SPRITES.md  MASTER_MIND.md  MISSING_SPRITES.md  PERFECTION_REPORT.md  sprint4_brief.md  sprint4_test_results.md
existing_city_mapping/: README.md
existing_city_mapping/docs/: ASSET_AUDIT.md  IMPLEMENTATION_BACKLOG.md
existing_city_mapping/tools/: validate_assets.py
exports/: city_seed_42.json
map_builder/: __init__.py  constants.py  map_generator.py  map_state.py  noise_utils.py  sheet_analyzer.py  tile_registry.py
map_builder/design/: __init__.py  blueprint.py
map_builder/phases/: __init__.py  blocks.py  buildings.py  civic.py  coastline.py  connector.py  elevation.py  highway.py  lots.py  parks.py  sidewalk.py  zones.py
mapping/: README.md
mapping_algorithm/: README.md
mapping_algorithm/cpp/: CMakeLists.txt
mapping_algorithm/cpp/examples/: demo.cpp
mapping_algorithm/cpp/include/mapping_algorithm/: design_blueprint.hpp  map_generator.hpp  map_types.hpp
mapping_algorithm/cpp/src/: map_generator.cpp
mapping_algorithm/cpp/tests/: smoke.cpp
mapping_algorithm/cpp/tools/: city_exporter.cpp
mapping_design/: README.md
mapping_design/assets/: asset_manifest.json
mapping_design/cpp/: CMakeLists.txt
mapping_design/cpp/tools/: asset_validator.cpp  runtime_asset_preparer_win.cpp  runtime_asset_validator.cpp
mapping_design/docs/: ASSET_AUDIT.md  ASSET_REGISTRY_SPEC.md  BUILDING_ASSEMBLY_SPEC.md  SEED_INSPECTOR_SPEC.md
reports/: team1_city_planning.md  team2_game_algorithms.md  team3_implementation_plan.md  team4_rpg_urban_design.md  team5_rpg_algorithm_research.md  team6_visual_realism.md  team7_rendering_techniques.md  team8_sprint3_gap_analysis.md
tests/: diag.py  full_suite.py  test_e2e.py
tools/: build_sprite_registry.py  calibrate_rects.py  convert_alpha.py  debug_sprites.py  export_atlases.py  visual_finalize_assets.py
